--- a/api/package.json
+++ b/api/package.json
@@ -79,10 +79,16 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fast-json-patch": "^3.0.0-1",
     "form-data": "^4.0.0",
     "jsonpatch": "^3.0.1",
+    "jsonpatch-to-mongodb": "^1.0.0",
     "jsonpointer": "^4.1.0",
     "knex": "^0.95.4",
+    "migrate-mongo": "^8.2.2",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.6",
+    "mongoose-patch-history": "^2.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
