--- a/api/package.json
+++ b/api/package.json
@@ -89,6 +89,7 @@
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
     "mongoose-patch-history": "^2.0.0",
+    "mongoose-patcher": "^0.2.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
