--- a/web/package.json
+++ b/web/package.json
@@ -92,6 +92,7 @@
     "js-cookie": "^2.2.1",
     "jsonpatch": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "knex": "^0.21.21",
     "markdown-it": "^12.0.6",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
